--- a/index.html
+++ b/index.html
@@ -7,45 +7,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="invite-container">
-        <div class="wrapper" id="envelope-wrapper">
-            <div class="lid one"></div>
-            <div class="lid two"></div>
-            <div class="envelope" id="envelope-trigger">
-            <div class="letter" id="letter">
-                Nội dung lá thư
-            </div>
+  <div class="envlope-wrapper">
+    <div id="envelope" class="close">
+        <div class="front flap"></div>
+        <div class="front pocket"></div>
+        <div class="letter">
+            <div class="words line1"></div>
+            <div class="words line2"></div>
+            <div class="words line3"></div>
+            <div class="words line4"></div>
+        </div>
+        <div class="letter_content">
+            <p>Đây là nội dung lá thư</p>
         </div>
     </div>
-        
-
-        <div class="instructions">Nhấp vào để mở</div>
-    </div>
-    <script>
-        const envelopeWrapper = document.getElementById('envelope-wrapper');
-        const envelope = document.getElementById('envelope-trigger');
-        const letter = document.getElementById('letter');
-
-        envelopeWrapper.addEventListener('click', function() {
-        // Thêm class active vào wrapper để kích hoạt hiệu ứng mở nắp
-        this.classList.add('active');
-
-        // Làm mờ dần phong bì sau khi nắp mở
-        setTimeout(() => {
-            envelope.classList.add('hidden');
-
-            // Hiện dần lá thư
-            setTimeout(() => {
-            letter.classList.add('visible');
-            }, 300);
-
-        }, 600);
-
-        // Nếu muốn chuyển trang sau khi hoàn thành hiệu ứng
-        // setTimeout(() => {
-        //   window.location.href = 'trang-thu.html';
-        // }, 2000);
-        });
-    </script>
+</div>
+<div class="reset">
+    <button id="open">Open</button>
+    <button id="reset">Reset</button>
+</div>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script><script  src="./script.js"></script>
 </body>
 </html>
