--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
             <div class="words line3"></div>
             <div class="words line4"></div>
         </div>
-        <div class="letter_content">
-            <p>Đây là nội dung lá thư</p>
+        <div id="content" class="letter_content">
+            <h1>Happy Birthday</h1>
+            <p>Wishing you a day filled with love, joy, and all your favorite things. May this year bring you happiness and success in everything you do. Enjoy your special day!</p>
+            <p>With love,</p>
+            <p>Your Name</p>
         </div>
     </div>
 </div>
 <div class="reset">
     <button id="open">Open</button>
-    <button id="reset">Reset</button>
+    <button id="reset">Close</button>
 </div>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script><script  src="./script.js"></script>
 </body>
