--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
         </div>
         <div id="content" class="letter_content">
             <h1>Happy Birthday</h1>
-            <p>Wishing you a day filled with love, joy, and all your favorite things. May this year bring you happiness and success in everything you do. Enjoy your special day!</p>
-            <p>With love,</p>
-            <p>Your Name</p>
+            <p>Dear Betties</p>
+            <p>I'm so excited to invite you to my birthday celebration!</p>
+            <p>Join me for a day of fun, laughter, and making memories together. We'll have good food, great music, and even better company.</p>
+            <p>When: [Date] at [Time] <br>
+                Where: [Location] <br>
+                What to bring: Just your wonderful self and your party mood!</p>
+            <p>Please let me know if you can make it by [RSVP date]. I truly hope you can join me - it wouldn't be the same without you there!</p>
+            <p>Looking forward to celebrating together!</p>
+            <p>Mai Anh Xink</p>
+            <a href="#" class="confirm_button">Confirm participation </a>
         </div>
     </div>
 </div>
