--- a/envelope.html
+++ b/envelope.html
@@ -107,7 +107,7 @@
             border-bottom-right-radius: 8px;
             margin-left: auto;
             margin-right: auto;
-            top: 300px;
+            top: 250px;
             background-color: #ff1493; /* Changed to deep pink */
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
             transition: transform 0.3s ease;
@@ -735,9 +735,9 @@
 
         .error-message {
             color: red;
-            font-size: 14px;
+            font-size: 20px;
             margin: 10px 0;
-            height: 20px;
+            height: 30px;
             opacity: 0;
             transition: opacity 0.3s ease;
         }
@@ -792,9 +792,9 @@
         <div class="password-decoration pw-deco-4">🎂</div>
 
         <h2>Nhập Mật Khẩu</h2>
-        <p>Vui lòng nhập mật khẩu để xem lời mời</p>
+        <p>💡 selna's birthday</p>
         <input type="password" id="passwordInput" class="password-input" placeholder="Nhập mật khẩu...">
-        <div id="errorMessage" class="error-message">Sai là bùn lắm đó!</div>
+        <div id="errorMessage" class="error-message">j đóoooo !!! 😠😠</div>
         <button id="passwordSubmit" class="password-submit">Xác nhận</button>
     </div>
 </div>
