--- a/images.html
+++ b/images.html
@@ -331,11 +331,63 @@
                 font-size: 1.8rem;
             }
         }
+
+        /* NEW STYLES FOR PAGE TRANSITION */
+        .page-transition {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #ff1493;
+            z-index: 9999;
+            transform: translateY(100%);
+            opacity: 0;
+            transition: transform 0.5s ease-in-out, opacity 0.3s ease-in-out;
+            pointer-events: none;
+        }
+
+        .page-transition.active {
+            transform: translateY(0);
+            opacity: 1;
+            pointer-events: all;
+        }
+
+        .page-transition-content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            color: white;
+            font-size: 28px;
+            font-family: 'Brush Script MT', cursive;
+            animation: pulse 1.5s infinite alternate;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.8;
+            }
+            100% {
+                transform: translate(-50%, -50%) scale(1.1);
+                opacity: 1;
+            }
+        }
     </style>
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+<!-- Page Transition Element -->
+<div class="page-transition">
+    <div class="page-transition-content">
+        Chuyển trang...
+        <div style="margin-top: 20px; font-size: 50px;">🎂✨</div>
+    </div>
+</div>
+
 <!-- Decorative elements -->
 <div id="decorations"></div>
 
@@ -463,6 +515,8 @@
         let currentImage = 0;
         const images = document.querySelectorAll('.gallery-image');
         const totalImages = images.length;
+        const redirectUrl = 'index.html'; // Replace with your actual redirect URL
+        const pageTransition = document.querySelector('.page-transition');
 
         // Initialize gallery
         function showImage(index) {
@@ -475,10 +529,26 @@
             currentImage = index;
         }
 
+        // Function to handle page transition
+        function initiateTransition() {
+            // Trigger the page transition
+            pageTransition.classList.add('active');
+
+            // Redirect after transition
+            setTimeout(() => {
+                window.location.href = redirectUrl;
+            }, 1500); // Matches the transition duration
+        }
+
         // Add click event to gallery container
         document.getElementById('imageGallery').addEventListener('click', function() {
             currentImage = (currentImage + 1) % totalImages;
             showImage(currentImage);
+
+            // If we've reached the last image, initiate transition
+            if (currentImage === totalImages - 1) {
+                setTimeout(initiateTransition, 500); // Small delay to see the last image
+            }
         });
 
         // Birthday countdown
