--- a/images.html
+++ b/images.html
@@ -447,6 +447,9 @@
                 </div>
             </div>
         </div>
+        <p class="gallery-instruction">
+            <i class="fas fa-hand-pointer"></i> Tap to see how gorgeous she is 😍
+        </p>
     </section>
 </div>
 
