--- a/index.html
+++ b/index.html
@@ -716,6 +716,7 @@
                 display: flex;
                 margin: -15px;
                 max-width: 100%;
+                top: 200px;
             }
 
             .letter_content {
