--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
             <div class="corner corner-br"></div>
 
             <h1>✨ Birthday Invitation ✨</h1>
-            <p>Thân mời, Bảo Quỳnh</p>
+            <p>Thân mời, ae sài gòn</p>
 
             <div class="invitation-details">
                 <div class="detail-item">
